--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.OrderDeliveryTrackingSystem"
         tools:targetApi="31">
         <activity
+            android:name=".orderviewDetails"
+            android:exported="false" />
+        <activity
+            android:name=".OrdersView"
+            android:exported="false" />
+        <activity
             android:name=".customerDashboard"
             android:exported="false" />
         <activity
