--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.OrderDeliveryTrackingSystem"
         tools:targetApi="31">
         <activity
+            android:name=".adminPage"
+            android:exported="false" />
+        <activity
             android:name=".orderplace"
             android:exported="false" />
         <activity
@@ -26,9 +29,6 @@
             android:exported="false" />
         <activity
             android:name=".customerDashboard"
-            android:exported="false" />
-        <activity
-            android:name=".customerlogin"
             android:exported="false" />
         <activity
             android:name=".employeelogin"
